--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.4",
+    "framer-motion": "^12.34.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
